--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,23 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  margin-top: 10px;
+
+  display: flex;
+  gap: 20px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  min-width: 70px;
+  border: 1px solid black;
+}
+
+.value {
+  font-size: 40px;
+}
